[project]
name = "changelog-publisher"
version = "0.1.0"
description = "Upsert-and-publish dotCMS release changelog entries to the dev.dotcms.com Dotcmsbuilds content type"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
]

[project.scripts]
changelog-publisher = "changelog_publisher.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/changelog_publisher"]

[tool.pytest.ini_options]
testpaths = ["tests"]
